--- a/Changes
+++ b/Changes
@@ -1,13 +1,13 @@
 ---
 version: 0.04
-date:    Mon Jul 28 07:03:57 PDT 2014
+date:    Mon Jul 28 07:14:27 PDT 2014
 changes:
 - Switch to Zilla-Dist
 ---
 version: 0.03
 date:    Thu Jul 26 11:03:45 PDT 2012
 changes:
-- Add utf8 pöd encöding
+- Add utf8 pod encoding
 ---
 version: 0.02
 date:    Wed Jul 25 20:50:25 PDT 2012
