--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.06
+date:    Sat Aug  2 10:02:10 PDT 2014
+changes:
+- Fix Copyright years.
+- Remove cruft doc from lib/Alt/Sex/INGY.pm
+---
 version: 0.05
 date:    Mon Jul 28 07:22:55 PDT 2014
 changes:
