--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.07
+date:    Fri Aug 15 17:55:32 PDT 2014
+changes:
+- Add t/000-compile-modules.t
+---
 version: 0.06
 date:    Sat Aug  2 10:02:10 PDT 2014
 changes:
