--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.08
+date:    Fri Aug 15 19:52:32 PDT 2014
+changes:
+- Add t/000-require-modules.t
+---
 version: 0.07
 date:    Fri Aug 15 17:55:32 PDT 2014
 changes:
