--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.09
+date:    Sat Aug 16 03:38:38 PDT 2014
+changes:
+- Eliminate spurious trailing whitespace
+---
 version: 0.08
 date:    Fri Aug 15 19:52:32 PDT 2014
 changes:
