--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.10
+date:    Sat Aug 16 10:45:17 PDT 2014
+changes:
+- Meta 0.0.2
+---
 version: 0.09
 date:    Sat Aug 16 03:38:38 PDT 2014
 changes:
