--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.11
+date:    Sat Aug 16 15:18:17 PDT 2014
+changes:
+- Change Pod to Swim
+---
 version: 0.10
 date:    Sat Aug 16 10:45:17 PDT 2014
 changes:
