--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.12
+date:    Sat Aug 16 16:24:59 PDT 2014
+changes:
+- Fix strict/warnings
+---
 version: 0.11
 date:    Sat Aug 16 15:18:17 PDT 2014
 changes:
